# ouss_mcp

./: .gitignore  Readme.md  mcp_trace.json  pyproject.toml  start_mcp.py
.github/workflows/: deploy.yml
docker/: Dockerfile
src/mcp_client/: test_mcp.py
src/mcp_server/: app.py  config.py  server.py
src/mcp_server/handlers/prompts/: summarize_prompt.py
src/mcp_server/handlers/resources/: file_resource.py
src/mcp_server/handlers/tools/: calculator.py  search.py
src/mcp_server/middleware/: auth.py  logging.py  rate_limiter.py
src/mcp_server/services/: calculator_service.py  search_service.py
src/mcp_server/utils/: resilience.py
