[project]
name = "mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",          # Official MCP SDK
    "fastapi>=0.115.0",          # HTTP/SSE transport
    "uvicorn[standard]>=0.32.0", # ASGI server
    "pydantic>=2.0.0",           # Schema validation
    "pydantic-settings>=2.0.0",  # Config from env
    "httpx>=0.27.0",             # Async HTTP client
    "structlog>=24.0.0",         # Structured logging
    "tenacity>=9.0.0",           # Retry logic
    "python-dotenv>=1.0.0",      # .env loading
    "sqlalchemy[asyncio]>=2.0",  # DB (optional)
    "redis[asyncio]>=5.0.0",     # Cache / rate limit
]

[dependency-groups]
dev = [
    "pytest>=8.0", "pytest-asyncio>=0.24",
    "ruff", "mypy", "pytest-cov",
]